# gps2024

./: main.py  pyproject.toml  schemas.py
gornyi-pokhod-za-sutki-2024/: 20-km-700-m-pervoprokhodtsy.json  40-km-1500-m-liubiteli.json  55-km-2000-m-sportsmeny.json  75-km-2500-m-professionaly.json
